[package]
name = "h264-reader"
version = "0.2.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
license = "MIT/Apache-2.0"
description = "Reader for H264 bitsream syntax"
categories = [ "multimedia::video" ]
keywords = [ "H-264" ]
readme = "README.md"

[dependencies]
bitreader = "0.3.1"
memchr = "2.1.1"

[dev-dependencies]
hex-literal = "0.1.0"
hex-slice = "0.1.4"
pretty_assertions = "0.5.1"
criterion = "0.2"

[[bench]]
name = "bench"
harness = false

[profile.bench]
# for profiling,
debug = true
