[package]
name = "h264-reader"
version = "0.6.1-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
license = "MIT/Apache-2.0"
description = "Reader for H264 bitstream syntax"
categories = [ "multimedia::video" ]
keywords = [ "H-264" ]
readme = "README.md"
repository = "https://github.com/dholroyd/h264-reader"
edition = "2018"

[dependencies]
bitstream-io = "1.1"
hex-slice = "0.1.4"
memchr = "2.1.1"
rfc6381-codec = "0.1"
log = "0.4"

[dev-dependencies]
hex-literal = "0.3.1"
criterion = "0.3"
test-case = "3.0.0"

[[bench]]
name = "bench"
harness = false

[profile.bench]
# for profiling,
debug = true
