[package]
name = "h264-reader"
version = "0.8.0-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
license = "MIT/Apache-2.0"
description = "Reader for H264 bitstream syntax"
categories = [ "multimedia::video" ]
keywords = [ "H-264" ]
readme = "README.md"
repository = "https://github.com/dholroyd/h264-reader"
edition = "2018"

[dependencies]
bitstream-io = "2.2"
hex-slice = "0.1.4"
memchr = "2.1.1"
rfc6381-codec = "0.2"
log = "0.4"

[dev-dependencies]
hex-literal = "0.4.1"
criterion = "0.5"
test-case = "3.0.0"
iai-callgrind = "0.14.0"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "ci_bench"
harness = false


[profile.bench]
# for profiling,
debug = true
